--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "voice-record",
+  "name": "react-audio-recorder",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "hook for record audio in react.js project with deviceChange functionality and many more...",
   "type": "module",
   "author": {
     "email": "ayanghosh.dev@gmail.com",
